--- a/src/style/components/_navigation.scss
+++ b/src/style/components/_navigation.scss
@@ -139,6 +139,10 @@
             #menu-4-btn {
                 display: none;
             }
+
+            #search-btn {
+                display: none;
+            }
         }
     }
 }
