--- a/src/index.css
+++ b/src/index.css
@@ -195,7 +195,7 @@ html {
 .input-area .input-field {
   width: 100%;
   height: 100%;
-  padding: 1.2rem 15.6rem 1.2rem 3.2rem;
+  padding: 1rem 15.6rem 1rem 3.2rem;
   font-size: inherit;
   border: 1px solid #E6E6E6;
 }
@@ -338,6 +338,9 @@ html {
   .nav-btns #menu-4-btn {
     display: none;
   }
+  .nav-btns #search-btn {
+    display: none;
+  }
 }
 .header {
   position: fixed;
@@ -358,12 +361,33 @@ html {
   display: none;
 }
 .header-bot {
+  transition: all 0.3s ease 0;
+  position: absolute;
+  top: -100%;
+  left: 0;
+  z-index: -10;
   padding: 1.2rem;
   background: #E6E6E6;
 }
 .header-bot .search-form {
   box-shadow: 0 0 1rem #999999;
   overflow: hidden;
+}
+.header-bot .search-form .input-area .btn-close {
+  transition: all 0.3s ease 0;
+  visibility: hidden;
+  opacity: 0;
+}
+.header-bot .search-form .input-area .btn-close.show {
+  visibility: visible;
+  opacity: 1;
+}
+.header-bot .search-form .input-area .btn-primary {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.header-bot.show {
+  top: 100%;
 }
 
 @media screen and (min-width: 768px) {
@@ -384,5 +408,10 @@ html {
   }
   .header-bot {
     padding: 1.2rem 24rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .header-bot {
+    position: static;
   }
 }/*# sourceMappingURL=index.css.map */
