--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,36 @@
   outline: none;
   list-style: none;
   text-decoration: none;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+.container {
+  max-width: 1920px;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.rounded {
+  border-radius: 100%;
+}
+
+.round-xl {
+  border-radius: 2.4rem;
+}
+
+.round-lg {
+  border-radius: 1.2rem;
+}
+
+.round-md {
+  border-radius: 0.8rem;
+}
+
+.round-sm {
+  border-radius: 0.4rem;
 }/*# sourceMappingURL=index.css.map */
