--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -7,3 +7,35 @@
     list-style: none;
     text-decoration: none;
 }
+
+html {
+    font-size: 62.5%;
+}
+
+.container {
+    max-width: 1920px;
+}
+
+.w-full {
+    width: 100%;
+}
+
+.rounded {
+    border-radius: 100%;
+}
+
+.round-xl {
+    border-radius: 2.4rem;
+}
+
+.round-lg {
+    border-radius: 1.2rem;
+}
+
+.round-md {
+    border-radius: .8rem;
+}
+
+.round-sm {
+    border-radius: .4rem;
+}
